--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "sql-formatter-plus": "^1.3.6"
+    "@babel/polyfill": "^7.7.0",
+    "lodash": "^4.17.15"
   }
 }
