--- a/.vscodeignore
+++ b/.vscodeignore
@@ -6,3 +6,56 @@ vsc-extension-quickstart.md
 **/jsconfig.json
 **/*.map
 **/.eslintrc.json
+
+# Development dependencies
+node_modules/**/test/**
+node_modules/**/tests/**
+node_modules/**/*.test.js
+node_modules/**/*.spec.js
+node_modules/**/.travis.yml
+node_modules/**/.github/**
+node_modules/**/Makefile
+node_modules/**/*.md
+node_modules/**/LICENSE
+node_modules/**/CHANGELOG.md
+node_modules/**/.npmignore
+node_modules/**/.editorconfig
+node_modules/**/.eslintrc*
+node_modules/**/.prettier*
+node_modules/**/tsconfig.json
+
+# Git and CI files
+.git/**
+.gitattributes
+.github/**
+.travis.yml
+.gitlab-ci.yml
+circle.yml
+appveyor.yml
+
+# Editor configuration
+.editorconfig
+.prettierrc
+.eslintrc
+
+# Documentation
+*.md
+!README.md
+CHANGELOG.md
+
+# Build and dev files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+Thumbs.db
+
+# Source control
+.git/**
+.gitignore
+.gitattributes
+
+# Development
+yarn.lock
+package-lock.json
